# game

./: .gitignore  CMakeLists.txt  README.md  upt.json
collision/: CMakeLists.txt
mods/: CMakeLists.txt
project/: CMakeLists.txt
scripts/: CMakeLists.txt
scripts/EasternKingdoms/: CMakeLists.txt
scripts/EasternKingdoms/Stratholme/: boss_maleki_the_pallid.cpp  boss_postmaster_malown.cpp
scripts/EasternKingdoms/SunwellPlateau/: boss_muru.cpp
scripts/Kalimdor/BlackfathomDeeps/: blackfathom_deeps.h  boss_aku_mai.cpp  boss_gelihast.cpp  boss_kelris.cpp  instance_blackfathom_deeps.cpp
scripts/Northrend/Nexus/Nexus/: boss_magus_telestra.cpp
scripts/OutdoorPvP/: CMakeLists.txt
scripts/Outland/HellfireCitadel/HellfireRamparts/: boss_vazruden_the_herald.cpp  instance_hellfire_ramparts.cpp
scripts/Spells/: spell_dk.cpp  spell_hunter.cpp  spell_priest.cpp  spell_warlock.cpp  spell_warrior.cpp
server/: CMakeLists.txt
server/authserver/: CMakeLists.txt
server/worldserver/: CMakeLists.txt
tool/map_extractor/: CMakeLists.txt  wdt.h
tool/mesh_extractor/: CMakeLists.txt
tool/mmaps_generator/: CMakeLists.txt
tool/vmap4_assembler/: CMakeLists.txt
world/: CMakeLists.txt
world/Conditions/: ConditionMgr.h
world/DataStores/: DBCStores.h  DBCStructure.h
world/Entities/Creature/: Creature.cpp  Creature.h
world/Entities/Player/: Player.h
world/Entities/Unit/: Unit.cpp
world/Guilds/: GuildMgr.cpp
world/Handlers/: ItemHandler.cpp
world/Miscellaneous/: SharedDefines.h
world/Scripting/: ScriptLoader.cpp  ScriptMgr.cpp  ScriptMgr.h
world/Spells/: SpellScript.cpp  SpellScript.h
world/Spells/Auras/: SpellAuraEffects.cpp  SpellAuraEffects.h  SpellAuras.cpp
world/World/: World.cpp  World.h
